frontend/src/components/VenueInformation/VenueList/venueList.scss
@use '../../../scss/abstracts' as *;
@use '../../../scss/layout' as *;

#venue {
	.event-title {
		@extend %multi-line-truncate;
		font-size: rem(16);
		margin-bottom: rem(6);
		font-weight: $fw-medium;

		@include breakpoint-max(md) {
			width: 98%;
		}
	}

	.venue-image {
		width: 120px;
		height: 120px;
		background-color: yellow;
	}

	// .scrollable {
	// 	&-container {
	// 		display: flex;
	// 		flex-direction: column;
	// 		min-height: 0;

	// 		@include breakpoint-min(md) {
	// 			height: 75%;
	// 		}
	// 	}
	// 	&-list {
	// 		@include scrollable();

	ul {
		.item {
			& + .item {
				margin-top: rem(32);
			}

			.icon-button {
				@include breakpoint-min(lg) {
					margin-left: auto;
				}
			}
		}
	}
}

